--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "author": "Dan Elder / Mark Bevels",
   "lib": "greeter",
-  "main": "dist/[lib].cjs.js",
-  "module": "dist/[lib].esm.js",
-  "browser": "dist/[lib].min.js",
+  "main": "dist/cjs/",
+  "module": "dist/esm/",
+  "browser": "dist/iife/",
+  "types": "dist/types/index.d.ts",
   "engines": {
     "node": ">=12",
     "npm": ">=6"
@@ -17,7 +18,6 @@
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts",
   "description": "Typescript starter project with Rollup and Jest and React",
   "license": "ISC",
   "scripts": {
@@ -30,7 +30,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-typescript": "^2.0.1",
+    "@rollup/plugin-typescript": "^5.0.2",
     "@testing-library/jest-dom": "^5.11.2",
     "@testing-library/react": "^10.4.7",
     "@types/jest": "^24.0.25",
