--- a/package.json
+++ b/package.json
@@ -27,6 +27,12 @@
     "test": "jest --coverage --config ./config/jest/jest.config.js",
     "clean": "rimraf dist"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "run-s lint test",
+      "pre-push": "yarn build"
+    }
+  },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-json": "^4.1.0",
@@ -45,6 +51,7 @@
     "eslint-plugin-react": "^7.20.5",
     "glob": "^7.1.6",
     "http-server": "^0.12.0",
+    "husky": "^4.2.5",
     "jest": "^24.9.0",
     "livereload": "^0.8.2",
     "npm-run-all": "^4.1.5",
